--- a/src/assets/locale/ru.json
+++ b/src/assets/locale/ru.json
@@ -39,5 +39,9 @@
     "DOYOUWANT": "Вы уверены, что хотите удалить?",
     "DELETE": "Удалить",
     "CANCEL": "Отмена"
+  },
+  "INVALID": {
+    "LOGIN": "Может содержать [A-z0-9].",
+    "PASSWORD": "Не меньше 6 символов."
   }
 }
