--- a/src/assets/locale/ru.json
+++ b/src/assets/locale/ru.json
@@ -21,7 +21,7 @@
     "DUEDATE": "Конец",
     "STATUS": "Статус",
     "ADDEVENT": "Добавить инцидент",
-    "DESCRIPTION": "Description",
+    "DESCRIPTION": "Описание",
     "PRIORITY": "Приоритет",
     "ADDINCIDENT": "Добавить инцидент",
     "EDITINCIDENT": "Редактировать инцидент"
@@ -42,6 +42,16 @@
   },
   "INVALID": {
     "LOGIN": "Может содержать [A-z0-9].",
-    "PASSWORD": "Не меньше 6 символов."
+    "PASSWORD": "Не меньше 6 символов.",
+    "NAME": "Имя должно иметь не меньше 17 символов.",
+    "AREA": "Вы должны выбрать отдел.",
+    "STARTDATE": "Вы должны выбрать дату.",
+    "DUEDATE": "Вы должны выбрать дату.",
+    "DUEDATETWO": "Дата не должна быть меньше текущей даты.",
+    "DESCRIPTION": "Вы должны добавить описание.",
+    "PRIORITY": "Вы должны выбрать приоритет.",
+    "POSITION": "Вы должны указать должность.",
+    "SURNAME": "Имя не должно содержать чисел.",
+    "BIRTHDAY": "Вы должны выбрать дату."
   }
 }
