--- a/src/assets/locale/ru.json
+++ b/src/assets/locale/ru.json
@@ -14,7 +14,7 @@
     "USERS": "Пользователи"
   },
   "INCIDENTS": {
-    "NAME": "Имя",
+    "NAME": "Название",
     "ASSIGNEE": "Должность",
     "AREA": "Отдел",
     "STARTDATE": "Начало",
