--- a/src/assets/locale/ru.json
+++ b/src/assets/locale/ru.json
@@ -11,7 +11,10 @@
     "PROJECT": "ПРОЕКТ",
     "EVENTS": "Инциденты",
     "PROCESS": "Процесс",
-    "USERS": "Пользователи"
+    "USERS": "Пользователи",
+    "EXIT": "Выход",
+    "LOGIN": "Вход",
+    "SIGN": "Регистрация"
   },
   "INCIDENTS": {
     "NAME": "Название",
@@ -33,8 +36,9 @@
     "ADDUSER": "Добавить пользователя"
   },
   "USERSFORM": {
-    "LOGIN": "Логин:",
-    "PASSWORD": "Пароль:",
+    "LOGIN": "Логин",
+    "SURNAME": "Фамилия",
+    "PASSWORD": "Пароль",
     "BACK": "Назад",
     "DOYOUWANT": "Вы уверены, что хотите удалить?",
     "DELETE": "Удалить",
